Fix excess task description padding on mobile view

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -303,7 +303,6 @@ div.spotlight.light {
 
     div.task-name {
         font-size: 37.9px;
-        padding-top: 300px;
         padding-bottom:60px;
         padding-left: 0px;
         padding-right: 0px;
